Updated project
Dependencies updated 
appcompat-v7 from 27.0.2 to 28.0.0
webrtc-android from from M59 to M64
butterknife from 8.8.1 to 9.0.0
nv-websocket-client from 2.3 to 2.9

Uses Java 8